# Mathematical-Optimization-Modeller

./: .travis.yml  AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac  modeller.pc.in
autom4te.cache/: output.1  output.2  output.3  output.4  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.7
examples/: Makefile.in  small.cpp
src/: Index.cpp  Index.hpp  Makefile.am  Makefile.in  Modeller.cpp  Modeller.hpp  Row.cpp  Row.hpp  Set.cpp  Set.hpp  Variable.cpp  Variable.hpp
